--- a/Hangman/Resources/layout/Menu.axml
+++ b/Hangman/Resources/layout/Menu.axml
@@ -12,7 +12,7 @@
         android:text="Play"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnPlay" />
+        android:id="@+id/btnPlayHangman" />
     <Button
         android:text="High Scores"
         android:layout_width="match_parent"
