--- a/Hangman/Resources/layout/Main.axml
+++ b/Hangman/Resources/layout/Main.axml
@@ -187,16 +187,40 @@
         android:id="@+id/linearLayout5"
         android:layout_gravity="center_horizontal">
         <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/button3"
+            android:layout_weight="1"
+            android:visibility="invisible" />
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:visibility="invisible" />
+        <Button
             android:text="Y"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/btnY"
-            android:layout_weight="2" />
+            android:layout_weight="1" />
         <Button
             android:text="Z"
             android:id="@+id/btnZ"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="2" />
+            android:layout_weight="1" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/button4"
+            android:layout_weight="1"
+            android:visibility="invisible" />
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:visibility="invisible" />
     </LinearLayout>
 </LinearLayout>
