--- a/Hangman/Resources/layout/Main.axml
+++ b/Hangman/Resources/layout/Main.axml
@@ -4,10 +4,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     <ImageView
-        android:src="@android:drawable/ic_menu_gallery"
+        android:src="@drawable/HMCreate"
         android:layout_width="match_parent"
         android:layout_height="317.0dp"
-        android:id="@+id/imageView" />
+        android:id="@+id/imageView"
+        android:layout_marginBottom="0.0dp" />
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
