--- a/Hangman/Resources/layout/Menu.axml
+++ b/Hangman/Resources/layout/Menu.axml
@@ -4,28 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:src="@android:drawable/ic_menu_gallery"
+        android:src="@drawable/FG"
+        android:id="@+id/imageView1"
         android:layout_width="match_parent"
-        android:layout_height="346.0dp"
-        android:id="@+id/imageView1" />
+        android:layout_height="346.0dp" />
     <Button
         android:text="Play"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnPlayHangman" />
+        android:id="@+id/btnPlayHangman"
+        android:textColor="@android:color/holo_blue_bright" />
     <Button
         android:text="High Scores"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnHighScores" />
+        android:id="@+id/btnHighScores"
+        android:textColor="@android:color/holo_blue_bright" />
     <Button
         android:text="Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button3" />
+        android:id="@+id/button3"
+        android:textColor="@android:color/holo_blue_bright" />
     <Spinner
         android:prompt="@string/difficulty_prompt"
         android:layout_width="match_parent"
         android:layout_height="39.5dp"
-        android:id="@+id/SPDifficulty" />
+        android:id="@+id/SPDifficulty"
+        android:textAlignment="center" />
 </LinearLayout>
