--- a/Hangman/Resources/layout/Main.axml
+++ b/Hangman/Resources/layout/Main.axml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     <ImageView
-        android:src="@drawable/HMCreate"
+        android:src="@drawable/HMCreate5"
         android:layout_width="match_parent"
         android:layout_height="317.0dp"
         android:id="@+id/imageView"
