--- a/Hangman/Resources/layout/Main.axml
+++ b/Hangman/Resources/layout/Main.axml
@@ -6,9 +6,17 @@
     <ImageView
         android:src="@drawable/HMCreate5"
         android:layout_width="match_parent"
-        android:layout_height="317.0dp"
+        android:layout_height="268.0dp"
         android:id="@+id/imageView"
         android:layout_marginBottom="0.0dp" />
+    <TextView
+        android:text="Text"
+        android:layout_width="match_parent"
+        android:layout_height="44.5dp"
+        android:id="@+id/textVWord"
+        android:gravity="center_horizontal"
+        android:textSize="35dip"
+        android:textColor="#17A007" />
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -183,7 +191,7 @@
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/linearLayout5"
         android:layout_gravity="center_horizontal">
