--- a/Hangman/Resources/layout/Main.axml
+++ b/Hangman/Resources/layout/Main.axml
@@ -3,16 +3,46 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <ImageView
-        android:src="@drawable/HMCreate5"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="268.0dp"
+        android:layout_height="33.0dp"
+        android:id="@+id/linearLayout7">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/button3"
+            android:layout_weight="1"
+            android:visibility="visible" />
+        <TextView
+            android:text="PlayerName"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:id="@+id/textView1"
+            android:gravity="center"
+            android:layout_weight="1" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/button4"
+            android:layout_weight="1"
+            android:visibility="visible"
+            android:text="New"
+            android:gravity="center" />
+    </LinearLayout>
+    <ImageView
+        android:src="@drawable/HMSetup"
+        android:layout_width="match_parent"
+        android:layout_height="273.5dp"
         android:id="@+id/imageView"
         android:layout_marginBottom="0.0dp" />
     <TextView
         android:text="Text"
         android:layout_width="match_parent"
-        android:layout_height="44.5dp"
+        android:layout_height="43.5dp"
         android:id="@+id/textVWord"
         android:gravity="center_horizontal"
         android:textSize="35dip"
@@ -20,7 +50,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="41.5dp"
         android:id="@+id/linearLayout1"
         android:layout_gravity="center_horizontal">
         <Button
@@ -63,7 +93,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="41.5dp"
         android:id="@+id/linearLayout2"
         android:layout_gravity="center_horizontal">
         <Button
@@ -106,7 +136,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="41.5dp"
         android:id="@+id/linearLayout3"
         android:layout_gravity="center_horizontal">
         <Button
@@ -149,7 +179,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="41.5dp"
         android:id="@+id/linearLayout4"
         android:layout_gravity="center_horizontal">
         <Button
@@ -192,21 +222,23 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="41.5dp"
         android:id="@+id/linearLayout5"
         android:layout_gravity="center_horizontal">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/button3"
+            android:id="@+id/button5"
             android:layout_weight="1"
-            android:visibility="invisible" />
+            xmlns:tools="http://schemas.android.com/tools"
+            tools:visibility="invisible" />
         <Button
-            android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:id="@+id/button6"
             android:layout_weight="1"
-            android:visibility="invisible" />
+            xmlns:tools="http://schemas.android.com/tools"
+            tools:visibility="invisible" />
         <Button
             android:text="Y"
             android:layout_width="wrap_content"
@@ -222,14 +254,16 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/button4"
+            android:id="@+id/button7"
             android:layout_weight="1"
-            android:visibility="invisible" />
+            xmlns:tools="http://schemas.android.com/tools"
+            tools:visibility="invisible" />
         <Button
-            android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:id="@+id/button8"
             android:layout_weight="1"
-            android:visibility="invisible" />
+            xmlns:tools="http://schemas.android.com/tools"
+            tools:visibility="invisible" />
     </LinearLayout>
 </LinearLayout>
