--- a/Hangman/Resources/layout/Main.axml
+++ b/Hangman/Resources/layout/Main.axml
@@ -8,14 +8,15 @@
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="33.0dp"
+        android:layout_height="37.0dp"
         android:id="@+id/linearLayout7">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/button3"
+            android:id="@+id/btnMenu"
             android:layout_weight="1"
-            android:visibility="visible" />
+            android:visibility="visible"
+            android:text="Menu" />
         <TextView
             android:text="PlayerName"
             android:layout_width="wrap_content"
@@ -27,7 +28,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/button4"
+            android:id="@+id/btnNewGame"
             android:layout_weight="1"
             android:visibility="visible"
             android:text="New"
@@ -36,7 +37,7 @@
     <ImageView
         android:src="@drawable/HMSetup"
         android:layout_width="match_parent"
-        android:layout_height="273.5dp"
+        android:layout_height="268.5dp"
         android:id="@+id/imageView"
         android:layout_marginBottom="0.0dp" />
     <TextView
@@ -225,20 +226,18 @@
         android:layout_height="41.5dp"
         android:id="@+id/linearLayout5"
         android:layout_gravity="center_horizontal">
-        <Button
+        <Button xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/button5"
             android:layout_weight="1"
-            xmlns:tools="http://schemas.android.com/tools"
-            tools:visibility="invisible" />
-        <Button
+            android:visibility="invisible" />
+        <Button xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/button6"
             android:layout_weight="1"
-            xmlns:tools="http://schemas.android.com/tools"
-            tools:visibility="invisible" />
+            android:visibility="invisible" />
         <Button
             android:text="Y"
             android:layout_width="wrap_content"
@@ -251,19 +250,17 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1" />
-        <Button
+        <Button xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/button7"
             android:layout_weight="1"
-            xmlns:tools="http://schemas.android.com/tools"
-            tools:visibility="invisible" />
-        <Button
+            android:visibility="invisible" />
+        <Button xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/button8"
             android:layout_weight="1"
-            xmlns:tools="http://schemas.android.com/tools"
-            tools:visibility="invisible" />
+            android:visibility="invisible" />
     </LinearLayout>
 </LinearLayout>
